# firefly-iii-bot

./: .gitignore  main.py  pyproject.toml
http_client/: client.http  firefly-iii.http
